working on uart interface not yet done

--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,3 +1,4 @@
 idf_component_register(SRCS "app_main.c"
                             "dwin.c"
+                            "uart_intf.c"
     INCLUDE_DIRS ".")
